--- a/libmount/meson.build
+++ b/libmount/meson.build
@@ -77,7 +77,7 @@ lib_mount_static = static_library(
   'mount_static',
   link_whole : lib__mount,
   link_with : [lib_common,
-               lib_blkid.get_static_lib()],
+               lib_blkid],
   dependencies : [realtime_libs],
   install : false)
 
